--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -1,34 +1,51 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".Game"
-    android:layout_gravity="center_horizontal">"
-
+    android:gravity="center_horizontal"
+    android:orientation="horizontal">
+    
     <ImageView
 		android:id="@+id/game"
-		android:layout_width="200dp"
-        android:layout_height="200dp"
+		android:layout_width="180dp"
+        android:layout_height="180dp"
 		android:src="@drawable/ic_game" 
 		android:layout_gravity="center_horizontal"
 		android:background="#FFFFFF"
 		android:padding="5dp"
+ 		android:layout_centerHorizontal="true"
+ 		android:layout_margin="20dp"
+ 		android:layout_marginTop="40dp"
 		/>
     
     <EditText 
         android:id="@+id/answer"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/game"
+        android:layout_marginTop="20dp"
+		android:imeOptions="actionGo"
+		android:hint="Type Answer..."
+		android:singleLine="true"
+		android:lines="1"
         />
     
     <TextView
         android:id="@+id/hint"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="" />
+        android:text=""
+        android:background="#dddddd"
+        android:textColor="#333333"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/answer"
+        android:layout_marginTop="20dp"
+        android:padding="10dp" />
     
-    
-
-</LinearLayout>
+</RelativeLayout>
