--- a/res/layout/game.xml
+++ b/res/layout/game.xml
@@ -13,6 +13,8 @@
 		android:layout_width="80dp"
         android:layout_height="80dp"
 		android:src="@drawable/ic_game" 
+		android:background="#FFFFFF"
+		android:padding="1dp"
 		/>
 
 </LinearLayout>
