--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/row"
 	android:layout_height="50dp"
-	android:gravity="left|center"
 	android:layout_width="fill_parent"
+	android:background="@drawable/borders"
+	android:orientation="horizontal"
+	android:gravity="center_vertical"
 	>
   
     <LinearLayout
         android:id="@+id/rowInner"
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
+        android:background="@drawable/grey_gradient"
         >
-    
-		<ImageView
-			android:id="@+id/img"
-			android:layout_width="70dp"
-	        android:layout_height="70dp"
-			android:src="@drawable/ic_game" 
-			/>
 		
 		<RelativeLayout 
 			android:layout_width="0dip"
@@ -27,33 +23,58 @@
 			android:gravity="center_vertical"
 			android:padding="10dp"
 			>
-				
+			
+		    <ImageView
+				android:id="@+id/img"
+				android:layout_width="50dp"
+		        android:layout_height="50dp"
+				android:src="@drawable/ic_game" 
+				/>
+		    		
 			<TextView android:id="@+id/name"
 		    	android:layout_width="wrap_content"
 		    	android:layout_height="wrap_content"
 		    	android:textColor="#6E6E6E"
 		    	android:textSize="20dp"
 		    	android:textStyle="bold"
-		    	android:gravity="center_vertical|center_horizontal"/>
+		    	android:gravity="center_vertical|center_horizontal"
+		    	android:layout_toLeftOf="@+id/ic_game"
+		    	android:layout_marginLeft="65dp"
+		    	android:textAllCaps="true"/>"
 			
 			<TextView android:id="@+id/desc" 
 		    	android:layout_width="wrap_content" 
 		     	android:layout_height="wrap_content" 
-		     	android:textSize="14dp"
+		     	android:textSize="12dp"
 		     	android:textColor="#6E6E6E"
 		     	android:gravity="center_vertical|center_horizontal"
-		     	android:layout_below="@+id/name"/>
-			
-			<TextView android:id="@+id/percent" 
-		    	android:layout_width="wrap_content" 
-		     	android:layout_height="wrap_content" 
-		     	android:textSize="40dp"
-		     	android:textColor="#FF0000"
-		     	android:layout_marginRight="15dp"
-		     	android:layout_alignParentRight="true" />"
+		     	android:layout_below="@+id/name"
+		     	android:layout_marginLeft="65dp"/>
 			
 		</RelativeLayout>
 		
 	</LinearLayout>
 	
-</LinearLayout>
+    <RelativeLayout
+	    android:id="@+id/actions"
+	    android:layout_width="57dp"
+	    android:layout_height="35dp"
+	    android:layout_alignParentRight="true"
+	    android:layout_centerVertical="true"
+	    android:gravity="center_vertical|center_horizontal"
+	    android:background="@drawable/locked"
+	    android:layout_marginTop="2dp"
+	    >
+		
+		<TextView android:id="@+id/percent" 
+	    	android:layout_width="wrap_content" 
+	     	android:layout_height="wrap_content" 
+	     	android:textSize="30dp"
+	     	android:textColor="#FF0000"
+	     	android:layout_alignParentRight="true"
+	     	android:gravity="center_vertical|center_horizontal"
+	     	android:visibility="invisible" />
+						
+	</RelativeLayout>
+	
+</RelativeLayout>
