--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,13 +3,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
-
+	
+     <RelativeLayout 
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:background="@drawable/footer"
+		android:layout_alignParentBottom="true"
+		/>
+    
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:background="#565656"
+        android:padding="10dp"
+        >
+        
+        <RelativeLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+			android:gravity="center_vertical"
+            >
+            
+            <ImageView
+				android:id="@+id/user"
+				android:layout_width="70dp"
+		        android:layout_height="70dp"
+				android:src="@drawable/user" 
+				android:gravity="center_vertical|center_horizontal"
+				/>
+	        
+	        <TextView
+	            android:id="@+id/username" 
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="Ashley"
+	            android:layout_alignParentLeft="true"
+	            android:textColor="#FFFFFF"
+	            android:layout_marginLeft="90dp"
+	            android:textSize="18dp"
+	            android:textStyle="bold"
+	            android:textAllCaps="true"
+	            android:gravity="center_vertical|center_horizontal"
+	            />
+	        
+	        <TextView
+	            android:id="@+id/time" 
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="00:01:29"
+	            android:layout_below="@+id/username"
+	            android:textSize="36dp"
+	            android:textColor="#b6d74d"
+	            android:layout_marginLeft="90dp"
+	            android:layout_marginTop="-5dp"
+	            android:gravity="center_vertical|center_horizontal"
+	            />
+	        
+        </RelativeLayout>
+        
+    </LinearLayout>
+    
     <ListView
 		android:id="@+id/levels"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:divider="#4F4F4F"
-	   	android:dividerHeight="1dip"
+		android:paddingLeft="12dp"
+		android:paddingRight="12dp"
+	   	android:layout_below="@+id/header"
+	   	android:divider="@android:color/transparent"
+	   	android:dividerHeight="12dp"
+	   	android:paddingTop="12dp"
 	   	/>
-
+    
 </RelativeLayout>
