--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -6,19 +6,105 @@
     android:gravity="center_horizontal"
     android:orientation="horizontal">
     
-    <ImageView
-		android:id="@+id/game"
-		android:layout_width="180dp"
-        android:layout_height="180dp"
-		android:src="@drawable/ic_game" 
-		android:layout_gravity="center_horizontal"
-		android:background="#FFFFFF"
-		android:padding="5dp"
- 		android:layout_centerHorizontal="true"
- 		android:layout_margin="20dp"
- 		android:layout_marginTop="40dp"
-		/>
-    
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:background="#565656"
+        android:padding="10dp"
+        >
+        
+        <RelativeLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+			android:gravity="center_vertical"
+            >
+            
+            <ImageView
+				android:id="@+id/logo"
+				android:layout_width="160dp"
+		        android:layout_height="70dp"
+				android:src="@drawable/logo" 
+				android:gravity="center_vertical|center_horizontal"
+				/>
+	        
+	        <TextView
+	            android:id="@+id/username" 
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="TIME TAKEN"
+	            android:layout_alignParentRight="true"
+	            android:textColor="#FFFFFF"
+	            android:layout_marginRight="6dp"
+	            android:layout_marginBottom="-10dp"
+	            android:layout_marginTop="8dp"
+	            android:textSize="18dp"
+	            android:textStyle="bold"
+	            android:textAllCaps="true"
+	            android:gravity="center_vertical|center_horizontal"
+	            />
+	        
+	        <TextView
+	            android:id="@+id/time" 
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="00:01:29"
+	            android:layout_below="@+id/username"
+	            android:textSize="36dp"
+	            android:textColor="#b6d74d"
+	            android:layout_marginRight="4dp"
+	            android:layout_marginTop="-5dp"
+	            android:gravity="center_vertical|center_horizontal"
+	            android:layout_alignParentRight="true"
+	            />
+	        
+        </RelativeLayout>
+        
+    </LinearLayout>
+ 
+    <LinearLayout
+        android:id="@+id/gameholder"
+        android:layout_width="200dp"
+	    android:layout_height="200dp"
+	    android:layout_gravity="center_horizontal"
+	    android:layout_centerHorizontal="true"
+	 	android:layout_margin="20dp"
+	 	android:layout_marginTop="40dp"
+	 	android:layout_below="@+id/header"
+        >
+    	
+        <RelativeLayout
+	        android:layout_width="180dp"
+		    android:layout_height="180dp"
+	        android:background="@drawable/borders"
+	        android:layout_gravity="center_horizontal"
+	    	android:layout_centerHorizontal="true"
+	        android:padding="10dp"
+	        >
+	        
+		    <ImageView
+				android:id="@+id/game"
+				android:layout_width="180dp"
+		        android:layout_height="180dp"
+				android:src="@drawable/ic_game" 
+				/>
+		    
+		</RelativeLayout>
+	    
+	    <RelativeLayout
+		    android:id="@+id/actions"
+		    android:layout_width="63dp"
+		    android:layout_height="41dp"
+		    android:layout_centerVertical="true"
+		    android:gravity="right"
+		    android:background="@drawable/complete"
+		    android:layout_marginLeft="132dp"
+		    android:visibility="invisible"
+		    />
+	
+	</LinearLayout>
+	    
     <EditText 
         android:id="@+id/answer"
         android:layout_width="250dp"
@@ -26,12 +112,14 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/game"
-        android:layout_marginTop="20dp"
+        android:layout_below="@+id/gameholder"
+        android:layout_marginTop="0dp"
 		android:imeOptions="actionGo"
 		android:hint="Type Answer..."
 		android:singleLine="true"
 		android:lines="1"
+		android:background="#ffffff"
+		android:padding="5dp"
         />
     
     <TextView
@@ -41,11 +129,11 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text=""
-        android:background="#dddddd"
+        android:background="@drawable/borders"
         android:textColor="#333333"
         android:layout_gravity="center_horizontal"
         android:layout_below="@+id/answer"
         android:layout_marginTop="20dp"
         android:padding="10dp" />
-    
+
 </RelativeLayout>
