--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -33,7 +33,7 @@
 	            android:id="@+id/username" 
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:text="TIME TAKEN"
+	            android:text="HINTS LEFT"
 	            android:layout_alignParentRight="true"
 	            android:textColor="#FFFFFF"
 	            android:layout_marginRight="6dp"
@@ -49,7 +49,7 @@
 	            android:id="@+id/time" 
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:text="00:01:29"
+	            android:text="2"
 	            android:layout_below="@+id/username"
 	            android:textSize="36dp"
 	            android:textColor="#b6d74d"
@@ -63,10 +63,10 @@
         
     </LinearLayout>
  
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/gameholder"
-        android:layout_width="200dp"
-	    android:layout_height="200dp"
+        android:layout_width="220dp"
+	    android:layout_height="220dp"
 	    android:layout_gravity="center_horizontal"
 	    android:layout_centerHorizontal="true"
 	 	android:layout_margin="20dp"
@@ -75,8 +75,8 @@
         >
     	
         <RelativeLayout
-	        android:layout_width="180dp"
-		    android:layout_height="180dp"
+	        android:layout_width="200dip"
+		    android:layout_height="200dip"
 	        android:background="@drawable/borders"
 	        android:layout_gravity="center_horizontal"
 	    	android:layout_centerHorizontal="true"
@@ -85,8 +85,8 @@
 	        
 		    <ImageView
 				android:id="@+id/game"
-				android:layout_width="180dp"
-		        android:layout_height="180dp"
+				android:layout_width="200dip"
+		        android:layout_height="200dip"
 				android:src="@drawable/ic_game" 
 				/>
 		    
@@ -99,11 +99,11 @@
 		    android:layout_centerVertical="true"
 		    android:gravity="right"
 		    android:background="@drawable/complete"
-		    android:layout_marginLeft="132dp"
+		    android:layout_marginLeft="152dp"
 		    android:visibility="invisible"
 		    />
 	
-	</LinearLayout>
+	</RelativeLayout>
 	    
     <EditText 
         android:id="@+id/answer"
