--- a/res/layout/activity_games_list.xml
+++ b/res/layout/activity_games_list.xml
@@ -16,6 +16,7 @@
 	    android:padding="0dp"
 	    android:layout_margin="0dp"
 	    android:layout_centerInParent="true"
+	    android:listSelector="@android:color/transparent"
 	    />
     
 </RelativeLayout>
