--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -44,7 +44,31 @@
 	     	android:textColor="#6E6E6E"
 	     	android:gravity="center_vertical|center_horizontal"
 	     	android:layout_below="@+id/name"
-	     	android:layout_marginLeft="65dp"/>
+	     	android:layout_marginLeft="65dp"
+	     	android:layout_marginTop="0dp"
+	     	android:layout_marginBottom="4dp"/>
+		
+		<LinearLayout 
+		    android:id="@+id/progress_holder"
+		    android:layout_width="180dip"
+		    android:layout_height="4dip"
+		    android:layout_below="@+id/desc"
+		    android:orientation="horizontal"
+			android:background="@drawable/progress_bg"
+			android:weightSum="100"
+			android:padding="1dip"
+			android:layout_marginLeft="65dp"
+		    >
+		    
+		    <LinearLayout 
+		    	android:id="@+id/progress_bar"
+			    android:layout_width="0dip"
+			    android:layout_weight="0"
+			    android:layout_height="2dip"
+				android:background="#D1FF29"
+			    />
+		    
+		</LinearLayout>
 		
 	</RelativeLayout>
 		
