--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -49,13 +49,13 @@
 	     	android:gravity="center_vertical|center_horizontal"
 	     	android:layout_below="@+id/name"
 	     	android:layout_marginLeft="65dp"
-	     	android:layout_marginTop="0dp"
+	     	android:layout_marginTop="-4dp"
 	     	android:layout_marginBottom="4dp"/>
 		
 		<LinearLayout 
 		    android:id="@+id/progress_holder"
 		    android:layout_width="180dip"
-		    android:layout_height="4dip"
+		    android:layout_height="6dip"
 		    android:layout_below="@+id/desc"
 		    android:orientation="horizontal"
 			android:background="@drawable/progress_bg"
@@ -69,8 +69,8 @@
 		    	android:id="@+id/progress_bar"
 			    android:layout_width="0dip"
 			    android:layout_weight="0"
-			    android:layout_height="2dip"
-				android:background="#D1FF29"
+			    android:layout_height="wrap_content"
+				android:background="@drawable/progress_bar"
 			    />
 		    
 		</LinearLayout>"
