--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -69,8 +69,8 @@
  
     <RelativeLayout
         android:id="@+id/gameholder"
-        android:layout_width="fill_parent"
-	    android:layout_height="220dp"
+        android:layout_width="match_parent"
+	    android:layout_height="match_parent"
 	    android:layout_gravity="center_horizontal"
 	    android:layout_centerHorizontal="true"
 	 	android:layout_below="@+id/header"
@@ -78,11 +78,11 @@
     	
         <ImageView
 			android:id="@+id/game"
-			android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
+			android:layout_width="match_parent"
+	        android:layout_height="match_parent"
 			android:scaleType="centerCrop"
 			android:adjustViewBounds="true"
-			android:src="@drawable/ic_game" 
+			
 			/>
 	    
 	    <RelativeLayout
@@ -97,24 +97,32 @@
 		    android:visibility="invisible"
 		    android:rotation="-90"
 		    />
-		
-	    <Button
-	        android:id="@+id/hintBtn"
-	        android:layout_width="40dip"
-	        android:layout_height="40dip"
-	        android:background="@drawable/hint"
-	        android:layout_alignParentBottom="true"
-	        android:layout_alignParentRight="true"
-	        android:layout_marginBottom="30dip"
-	        android:layout_marginRight="10dip"
-	        
-	         />
 	    
 	</RelativeLayout>
 	
-    
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/answerbox"
+        android:background="@drawable/shaddow_gradient"
+         >
+	    
+        <Button
+	        android:id="@+id/hintBtn"
+	        android:layout_width="40dip"
+	        android:layout_height="40dip"
+	        android:background="@drawable/hint"	        
+	        android:layout_gravity="right"
+	        android:gravity="right"
+	        android:layout_marginBottom="5dip"
+	        android:layout_marginLeft="5dip"
+	        
+	         />
+        
+    </LinearLayout>
     
     <LinearLayout
+        android:id="@+id/answerbox"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dip"
@@ -168,14 +176,12 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:text=""
         android:background="@drawable/borders"
         android:textColor="#333333"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/gameholder"
+        android:layout_below="@+id/header"
+        
         android:layout_margin="10dip"
-        android:layout_marginTop="20dp"
         android:padding="30dp"
         android:gravity="center"
         android:visibility="invisible"
