--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,18 +17,17 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-	
+
     <style name="ShowcaseView">
         <item name="titleTextColor">#e2ef65</item>
         <item name="detailTextColor">#FFFFFF</item>
         <item name="backgroundColor">#90000000</item>
     </style>
-    
+
     <style name="ShowcaseTitleText">
         <item name="android:paddingTop">20dp</item>
-        
     </style>
-    
+
     <style name="ShowcaseButton">
         <item name="android:paddingTop">20dip</item>
         <item name="android:paddingBottom">20dip</item>
@@ -36,7 +35,23 @@
         <item name="android:paddingRight">40dip</item>
         <item name="android:background">@drawable/button</item>
         <item name="android:layout_height">10dip</item>
-       
     </style>
+
+    <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="buttonBarStyle">@style/ButtonBar</item>
+        <item name="buttonBarButtonStyle">@style/ButtonBarButton</item>
+    </style>
+
+    <style name="ButtonBar">
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingRight">2dp</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:background">@android:drawable/bottom_bar</item>
+    </style>
+
+    <style name="ButtonBarButton" />
 
 </resources>
