--- a/res/layout/facebook_post.xml
+++ b/res/layout/facebook_post.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:background="#3B5998" >
 	
     <LinearLayout
         android:id="@+id/header"
@@ -26,6 +27,40 @@
 				android:src="@drawable/logo" 
 				android:gravity="center_vertical|center_horizontal"
 				/>
+            
+            <TextView
+	            android:id="@+id/hintText" 
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="Requesting"
+	            android:layout_alignParentRight="true"
+	            android:textColor="#FFFFFF"
+	            android:layout_marginRight="6dp"
+	            android:layout_marginBottom="-10dp"
+	            android:layout_marginTop="8dp"
+	            android:textSize="18dp"
+	            android:textStyle="bold"
+	            android:textAllCaps="true"
+	            android:gravity="center_vertical|center_horizontal"
+	            />
+	        
+	        <TextView
+	            android:id="@+id/hints" 
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="Assistance"
+	            android:layout_below="@+id/hintText"
+	            android:textSize="36dp"
+	            android:textColor="#b6d74d"
+	            android:layout_marginRight="4dp"
+	            android:layout_marginTop="-5dp"
+	            android:gravity="center_vertical|center_horizontal"
+	            android:layout_alignParentRight="true"
+	            android:shadowColor="#363636"
+			    android:shadowDx="-1"
+			    android:shadowDy="-1"
+			    android:shadowRadius="0.6"
+	            />
 
         </RelativeLayout>
         
@@ -46,5 +81,15 @@
 		android:shadowDy="-1"
 		android:shadowRadius="0.6"
 		/>
+    
+   <ImageView 
+       android:src="@drawable/facebooklogo"
+       android:layout_width="200dp"
+       android:layout_height="wrap_content"
+       android:gravity="center_vertical|center_horizontal"
+       android:layout_centerHorizontal="true"
+       android:layout_centerVertical="true"
+       android:layout_marginTop="20dp"
+       />
     
 </RelativeLayout>
