--- a/res/layout/activity_games_page.xml
+++ b/res/layout/activity_games_page.xml
@@ -26,7 +26,7 @@
 				android:id="@+id/logo"
 				android:layout_width="160dp"
 		        android:layout_height="70dp"
-				android:src="@drawable/logo" 
+				android:src="@drawable/logo_header" 
 				android:gravity="center_vertical|center_horizontal"
 				/>
 	        
