--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -22,10 +22,10 @@
             >
             
             <ImageView
-				android:id="@+id/logo_header"
+				android:id="@+id/logo"
 				android:layout_width="160dp"
 		        android:layout_height="70dp"
-				android:src="@drawable/logo" 
+				android:src="@drawable/logo_header" 
 				android:gravity="center_vertical|center_horizontal"
 				/>
 	        
